--- a/2front/myapp/src/app/home/menu/middle/list-progect/list-progect.component.html
+++ b/2front/myapp/src/app/home/menu/middle/list-progect/list-progect.component.html
@@ -1,57 +1,45 @@
-<!--
-*ngFor="let  data of Service.dataBase;let i= index"
--->
 <div class="row">
-  <div class="col">
-    <button (click)="modalServ._openModal(sorting)" type="button "  class="btn btn-secondary">&rArr;Sorting</button>
-  </div>
-  <div class="col">
-    <form class="form-inline">
-      <input class="form-control " type="search" placeholder="Search" aria-label="Search">
-    </form>
-  </div>
-
-  <div *ngIf="service.getIdiser()==(1||2)" class="col">
-      <select class="custom-select" >
-        <option value="0">Open</option>
-        <option value="1">InProgress</option>
-        <option value="2">Ressolved</option>
-        <option value="3">Reopend</option>
-        <option value="4">Closed</option>
-      </select>
-  </div>
-  <div class="row">
-    <div class="col">
-      <button type="button " class="btn btn-dark btnPadding">&dArr;</button>
-    </div>
-    <div class="col">
-      <button type="button" class="btn btn-dark">&uArr;</button>
-    </div>
-  </div>
-  <div class="col coloCHek">
-
-    <div class="form-check">
-      <label class="form-check-label">
-        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
-        по  дате
-      </label>
-    </div>
-    <div class="form-check">
-      <label class="form-check-label">
-        <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">по времени
-      </label>
-    </div>
-  </div>
+  <app-sort-menu></app-sort-menu>
 </div>
-
-
-
-    <app-table [Data]="allProject" [list]="['Projects','','Status RFT','','']"></app-table>
+<div [ngSwitch]="service.getIdUser()" class="row cardA">
+  <div *ngIf="service.getIdUser()==2" [ngSwitch]="service.flagUserList" class="row cardA">
+    <ng-container *ngSwitchCase="true">
+      <div class="container-fluid">
+        <div class="row">
+          <app-card [Data]="allUsers" [list]="['Projects','','Status RFT','','']"></app-card>
+        </div>
+      </div>
+    </ng-container>
+    <ng-container *ngSwitchCase="false">
+      <div class="container-fluid">
+        <div class="row">
+          <app-card [Data]="allProject" [list]="['Projects','','Status RFT','','']"></app-card>
+        </div>
+      </div>
+    </ng-container>
+  </div>
+  <ng-container *ngSwitchCase="1">
+    <div class="container-fluid">
+      <div class="row">
+        <app-card [Data]="allProject" [list]="['Projects','','Status RFT','','']"></app-card>
+      </div>
+    </div>
+  </ng-container>
+  <ng-container *ngSwitchCase="3">3</ng-container>
+  <ng-container *ngSwitchCase="4">4</ng-container>
+</div>
+<div class="row">
+  <app-pagination *ngIf="service.getIdUser()"></app-pagination>
+</div>
+<!--
+<div [ngSwitch]="service.flagUserList"  class="row cardA">
+  <button *ngSwitchCase="true" class="btn botonCardColor" (click)=modalServ._openModal(templeyt,true)>Settings</button>
+  <button *ngSwitchCase="false" class="btn botonCardColor" (click)="goComponent('Home/ProjectView')">Work</button>
+</div>
+<div class="row"> <app-table [Data]="allProject" [list]="['Projects','','Status RFT','','']"></app-table>
+</div>
 <app-table [Data]="allUsers" [list]="['Projects','','Status RFT','','']"></app-table>
 <app-table [Data]="allTask" [list]="['ProjectsT','','Status RFTT','','']"></app-table>
-
-
-
 <div >
 <table class="table table-hover textColor">
   <thead class="thead-light">
@@ -74,19 +62,19 @@
    <td>
        <p class="h4">Open</p>
    </td>
-    <td *ngIf="1==service.getIdiser()|| service.flagUserList" >
+    <td *ngIf="1==service.getIdUser()|| service.flagUserList" >
           <div  class="row cardA">
             <button (click)="modalServ.openXl(templeyt)"  class="btn btn-danger" >Delete</button>
           </div>
     </td>
-   <td *ngIf="service.getIdiser()==(3||4)">
+   <td *ngIf="service.getIdUser()==(3||4)">
      <p class="h4">Comments</p>
    </td>
   </tr>
   </tbody>
 </table>
 </div>
-
 <ng-template #templeyt >
  <app-new-user></app-new-user>
 </ng-template>
+-->
