--- a/2front/myapp/src/app/home/menu/middle/new-user/new-user.component.html
+++ b/2front/myapp/src/app/home/menu/middle/new-user/new-user.component.html
@@ -1,45 +1,48 @@
 <div class="container color">
-  <form  [formGroup]="fomUser" class="was-validated cardA">
+  <form [formGroup]="fomUser" class="was-validated cardA">
     <div class="h3">New user</div>
-
-
-
-    <div class="cardA" >
-      <label class="h6" >User name</label>
-      <input type="text" class="form-control" id="login" formControlName="login" name="login" required >
+    <div class="cardA">
+      <label class="h6">User name</label>
+      <input type="text" class="form-control" id="login" formControlName="login" name="login" required>
     </div>
-
     <div class="form-group cardA">
-      <label class="h6" >Role</label>
+      <label class="h6">Role</label>
       <select name="role" formControlName="role" class="custom-select" required>
         <option value="">Open this select menu</option>
         <option value="1">Developer</option>
         <option value="2">Tester</option>
         <option value="3">Project Manager</option>
         <option value="3">Admin</option>
-
       </select>
       <div class="invalid-feedback">Example invalid custom select feedback</div>
     </div>
-
-
-    <div class="cardA" >
-      <label class="h6" >Password</label>
-      <input name="password" formControlName="passwordOne" type="password" class="form-control"  placeholder="" value="" required >
+    <div class="cardA">
+      <label class="h6">Password</label>
+      <input name="password" formControlName="passwordOne" type="password" class="form-control" placeholder="" value=""
+             required>
+      <div class="alert alert-danger "
+           *ngIf="fomUser.controls['passwordOne'].invalid">
+        Error name Minimum length = 4 and max 100
+      </div>
     </div>
-
-    <div class="cardA" >
+    <div class="cardA">
       <label class="h6">Confirm password</label>
-      <input type="password" formControlName="password" type="password"  class="form-control" placeholder="" value="" required >
-
+      <input type="password" formControlName="password" type="password" class="form-control" placeholder="" value=""
+             required>
+      <div class="alert alert-danger "
+           *ngIf="fomUser.controls['password'].invalid ">
+        Error name Minimum length = 4 and max 100
+      </div>
     </div>
   </form>
   <br>
-  <div   class=" cardA ">
-    <button type="submit" class="btn btn-dark text-white cardA"  (click)="createNewUser()">
+  <div class=" cardA ">
+    <button type="submit" class="btn btn-dark text-white cardA" (click)="createNewUser()">
       Create
-    </button></div>
+    </button>
+  </div>
 
 </div>
+
 
 
