--- a/2front/myapp/src/app/home/menu/middle/work-task/work-task.component.html
+++ b/2front/myapp/src/app/home/menu/middle/work-task/work-task.component.html
@@ -1,44 +1,53 @@
 <div class="h1 textColor">Progect name -d2</div>
-<div class="container" >
-<table class="table table-dark table-hover " >
-  <thead >
-  <tr>
-    <th scope="col-md-3">id</th>
-    <th scope="col-md-3">Executor</th>
-    <th scope="col-md-3">Tester</th>
-    <th scope="col-md-3">progress</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr>
-    <th scope="row">1</th>
-    <td>Mark</td>
-    <td>Otto</td>
-    <td>    <div class="progress card-title cardA">
-      <div class="progress-bar" role="progressbar" style="width: 35%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">35% </div>
-    </div>
-    </td>
-  </tr>
-  <tr>
-    <th scope="row">2</th>
-    <td>Jacob</td>
-    <td>Thornton</td>
-    <td>    <div class="progress card-title cardA">
-      <div class="progress-bar" role="progressbar" style="width: 35%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">35% </div>
-    </div>
-    </td>
-  </tr>
-  <tr>
-    <th scope="row">3</th>
-    <td>Larry</td>
-    <td>the Bird</td>
-    <td>    <div class="progress card-title cardA">
-    <div class="progress-bar" role="progressbar" style="width: 35%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">35% </div>
-  </div>
-    </td>
-  </tr>
-  </tbody>
+<div class="container">
+  <table class="table table-dark table-hover ">
+    <thead>
+    <tr>
+      <th scope="col-md-3">id</th>
+      <th scope="col-md-3">Executor</th>
+      <th scope="col-md-3">Tester</th>
+      <th scope="col-md-3">progress</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mark</td>
+      <td>Otto</td>
+      <td>
+        <div class="progress card-title cardA">
+          <div class="progress-bar" role="progressbar" style="width: 35%;" aria-valuenow="25" aria-valuemin="0"
+               aria-valuemax="100">35%
+          </div>
+        </div>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Jacob</td>
+      <td>Thornton</td>
+      <td>
+        <div class="progress card-title cardA">
+          <div class="progress-bar" role="progressbar" style="width: 35%;" aria-valuenow="25" aria-valuemin="0"
+               aria-valuemax="100">35%
+          </div>
+        </div>
+      </td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>Larry</td>
+      <td>the Bird</td>
+      <td>
+        <div class="progress card-title cardA">
+          <div class="progress-bar" role="progressbar" style="width: 35%;" aria-valuenow="25" aria-valuemin="0"
+               aria-valuemax="100">35%
+          </div>
+        </div>
+      </td>
+    </tr>
+    </tbody>
 
-</table>
+  </table>
 </div>
 
