--- a/2front/myapp/src/app/home/menu/sidemenu/sidemenu.component.html
+++ b/2front/myapp/src/app/home/menu/sidemenu/sidemenu.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="service.getIdiser()==(3||4)" class="container">
+<div *ngIf="service.getIdUser()==(3||4)" class="container">
   <div class="h3">Loose task</div>
 <table  class="table table-hover">
   <thead class="thead-light">
