--- a/2front/myapp/src/app/home/sidebar/sidebar.component.html
+++ b/2front/myapp/src/app/home/sidebar/sidebar.component.html
@@ -2,7 +2,7 @@
   <div *ngFor="let  pathsSideBar of service.pathsSideBar;">
       <div class="col-sm">
         <div class="row">
-        <div *ngIf="service.getIdiser()==pathsSideBar.Role" type="button" class="cardA card colorCard">
+        <div *ngIf="service.getIdUser()==pathsSideBar.Role" type="button" class="cardA card colorCard">
           <a  (click)="service.goComponent(pathsSideBar.nameRout,pathsSideBar.booleanCheckOpenList)" class="btn">
             <div class="card-body">
               <h4 class="card-title h4">&rArr;{{pathsSideBar.nameForm}}</h4>
