refactor model in front

--- a/2front/myapp/src/app/home/menu/middle/list-progect/card/card.component.html
+++ b/2front/myapp/src/app/home/menu/middle/list-progect/card/card.component.html
@@ -7,6 +7,7 @@
             <ng-container>
               {{data?.login | json }}
               {{data?.name | json }}
+              {{data?.Status | json }}
             </ng-container>
           </div>
         </div>
@@ -14,6 +15,7 @@
           <div class="col h6">
             <ng-container>
               {{data?.summary | json }}
+              {{data?.createDate | json }}
               {{data?.role | json }}
             </ng-container>
           </div>
