--- a/2front/myapp/src/app/home/menu/middle/list-progect/card/card.component.html
+++ b/2front/myapp/src/app/home/menu/middle/list-progect/card/card.component.html
@@ -5,8 +5,10 @@
         <div class="row">
           <div class="col h4">
             <ng-container>
+              {{data?.code }}
               {{data?.login }}
               {{data?.name }}
+              {{data?.cod_project}}
               {{data?.Status }}
             </ng-container>
           </div>
@@ -14,15 +16,16 @@
         <div class="row">
           <div class="col h6">
             <ng-container>
+              {{data?.description}}
               {{data?.summary  }}
-              {{data?.createDate }}
-              {{data?.role  }}
+              {{data?.role}}
+              {{data?.statusRFT}}
             </ng-container>
           </div>
         </div>
         <div class="row">
           <div class="col h6">
-            <button class="btn btn-secondary" (click)="goComponent('Home/ProjectView',data?.cod_project )">Просмотр/Редактирование
+            <button class="btn btn-secondary" (click)="goComponent('Home/ProjectView',data?.id)">Просмотр/Редактирование
             </button>
           </div>
         </div>
